2007-10-10  Roger While <simrw@sim-basis.de>

	* General : bootstrap up to libtool 1.5.24
	* configure.ac : HP specific options

2007-09-18  Roger While <simrw@sim-basis.de>

	* configure.ac : Check for mvgetnstr in curses lib

2007-08-31  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix insufficient tests for enable/disable

2007-08-09  Roger While <simrw@sim-basis.de>

	* configure.ac : Shared option for Solaris
		New configure option --with-index-extfh, allows
		usage of an external ISAM file handler

2007-07-14  Roger While <simrw@sim-basis.de>

	* configure.ac : Changes for AIX

2007-06-27  Roger While <simrw@sim-basis.de>

	* configure.ac : Check if we can use strftime to get timezone

2007-03-13  Roger While <simrw@sim-basis.de>

	* configure.ac : Check for sys/time.h

2007-01-30  Roger While <simrw@sim-basis.de>

	* configure.ac : Check for langinfo/iconv
	* README : Update

2007-01-25  Roger While <simrw@sim-basis.de>

	* All : Update Coypright info on all files
	* README : Update - SORT does not require BDB; Fix typo
	* cpucheck.c : Uck, Intel, in their infinite wisdom, decided
		to assign the same family to Core 2 Duo as 
		Pentium (pro/2/3). Check the model number.

2006-10-25  Roger While <simrw@sim-basis.de>

	* README : Update

2006-10-23  Roger While <simrw@sim-basis.de>

	* configure.ac : Remove gcc specific options from the
	  Makefile templates and pull it back into configure.
	  This should make building on non-gcc systems somewhat easier.

2006-08-29  Roger While <simrw@sim-basis.de>

	* General : FSF address change
	* COPYING.DOC : New file, GNU Free Documentation license

2006-08-28  Roger While <simrw@sim-basis.de>

	* configure.ac : Implement --disable-param-check
	  and --enable-experimental

2006-08-22  Roger While <simrw@sim-basis.de>

	* configure.ac : BDB neeeds stdlib.h for 64-bit build

2006-08-03  Roger While <simrw@sim-basis.de>

	* README update

2006-07-06  Roger While <simrw@sim-basis.de>
