@@ -1,3 +1,9 @@
+2007-10-12  Roger While <simrw@sim-basis.de>
+
+	* tree.[ch], typeck.c, codegen.c : The special registers RETURN-CODE, SORT-RETURN
+		and NUMBER-OF-CALL-PARAMETERS must be per module and not per
+		compilation unit.
+
 2007-10-10  Roger While <simrw@sim-basis.de>
 
 	* field.c : More checking for 77/78 levels
