@@ -1,3 +1,7 @@
+2007-10-14  Roger While <simrw@sim-basis.de>
+
+	* libcob.h : Add gmp include for C++
+
 2007-10-10  Roger While <simrw@sim-basis.de>
 
 	* General : bootstrap up to libtool 1.5.24
